--- a/AdministratorWydarzen-WinForms/AdministratorWydarzen-WinForms.csproj
+++ b/AdministratorWydarzen-WinForms/AdministratorWydarzen-WinForms.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="CsvHelper" Version="32.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
